# xtp-for-python

./: CMakeLists.txt  README.md
py_xtp_quote/include/: py_xtp_quote.h
py_xtp_quote/src/: py_xtp_quote.cc
python/: test.py
python/api/: __init__.py  quote.py  xtp_types.py
